Cambios en las propiedades. Nuevo atributo "Consumible" agregado a Material.